<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- create history screen
add recycler view
show all transactions -->
    <TextView
        android:id="@+id/tvHistoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_title"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etFromDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:textSize="14sp"
        android:focusable="false"
        android:hint="@string/history_from_date_hint"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@id/etToDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHistoryTitle" />

    <EditText
        android:id="@+id/etToDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/history_to_date_hint"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etFromDate"
        app:layout_constraintTop_toBottomOf="@id/tvHistoryTitle" />

    <TextView
        android:id="@+id/tvEmptyHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/history_empty_default"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFromDate" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExpenses"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFromDate" />

</androidx.constraintlayout.widget.ConstraintLayout>

